--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 
 server.port=8080
+
+# ---- MySQL settings ----
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/atm?useSSL=false
+
+spring.datasource.username=root
+spring.datasource.password=
+# ------------------------
